--- a/src/application/work/assets/css/main.css
+++ b/src/application/work/assets/css/main.css
@@ -23,5 +23,69 @@
 .contex_title{
   margin-top: 5%;
   margin-bottom: 10px;
-  font-size: 40px;
+  font-size: 6vh;
+}
+.comic_item{
+  margin-top: 3vh;
+  height: 30vh;
+  /* background-color: blue; */
+  border-bottom: 1px solid rgb(200, 200, 200);
+
+}
+.comic_img{
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+}
+.comic_title{
+  font-size: 4vh;
+}
+.comic_context{
+  font-size: 2.5vh;
+}
+.comic_star{
+  font-size: 3.5vh;
+
+}
+.bottom_introduce{
+  height: 31vh;
+  margin-top: 7vh;
+  width: 100%;
+  background-color: #1d2b34;
+  color: white;
+
+}
+.bottom_context{
+  height: 75%;
+  
+  margin-left: 15%;
+  margin-right: 15%;
+  border-bottom: 2px solid #2f454f;
+}
+.bottom_title{
+  margin-top: 1.5vh;
+  font-size: 3vh;
+}
+.bottom_item{
+  margin-top: 300px;
+  font-size: 2vh;
+  color: #9b9fa1;
+}
+.bottom_item:hover{
+  color: #d8d8d8;
+
+}
+.bottom_bottom{
+  text-align:center;
+  margin-top: 1.5vh;
+  font-size: 2.5vh;
+  color: #b1b6b9;
+}
+.bottom_bottom>a{
+  color: #b1b6b9;
+}
+
+.bottom_bottom>a:hover{
+  color: #d8d8d8;
+
 }
