--- a/src/application/work/assets/css/main.css
+++ b/src/application/work/assets/css/main.css
@@ -38,6 +38,11 @@
   /* height: 100%; */
   object-fit:cover;
 }
+.chapter_img{
+  width: 90%;
+  /* height: 100%; */
+  object-fit:cover;
+}
 .comic_title{
   font-size: 4vh;
 }
